@@ -1,81 +1,6 @@
 #!/usr/bin/make -f
-# spice debian/rules using debhelper
-# Copyright (C) 2010 Liang Guo <bluestonechina@gmail.com>
-
-ifneq (,$(findstring debug,$(DEB_BUILD_OPTIONS)))
-  CXXFLAGS += -g
-endif
-
-ifneq (,$(filter noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
-else
-	CFLAGS += -O2
-endif
-ifeq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-	NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-	MAKEFLAGS += -j$(NUMJOBS)
-endif
-
-DEB_HOST_MULTIARCH = $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
-configure_opts := --prefix=/usr --libdir=/usr/lib/$(DEB_HOST_MULTIARCH)
-
-build-arch: build
-build-indep: build
-
-build: build-stamp
-build-stamp:
-	dh_autoreconf
-	./configure $(configure_opts) --disable-celt051
-	$(MAKE)
-	touch build-stamp
-
-clean:
-	dh_testdir
-
-	rm -f build-stamp
-	[ ! -f Makefile ] || $(MAKE) clean
-	[ ! -f server/Makefile ] || $(MAKE) -C server distclean
-	[ ! -f client/Makefile ] || $(MAKE) -C client distclean
-	rm -f common/Makefile common/win/Makefile common/win/my_getopt-1.5/Makefile
-	rm -f Makefile config.h config.log config.status libtool python_modules/Makefile spice-server.pc
-	rm -f python_modules/*.pyc
-	rm -f stamp-h1
-	dh_autoreconf_clean
-
-	dh_clean
-
-install: install-stamp
-install-stamp: build-stamp
-	dh_testdir
-	dh_testroot
-	dh_prep
-	dh_installdirs
-	$(MAKE) install DESTDIR=$(CURDIR)/debian/tmp
-	dh_install --sourcedir=debian/tmp
-	touch install-stamp
-
-binary-arch: build install
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs
-	dh_installdocs 
-	dh_installexamples
-	dh_installman
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-	dh_makeshlibs
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-# Build architecture-independent files here.
-binary-indep: build install
-# We have nothing to do by default.
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install
+%:
+	dh $@  --with autoreconf
+override_dh_auto_configure:
+	dh_auto_configure --  --disable-celt051 --disable-smartcard
 
